--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<title></title>
 		
 		<!-- Kendo UI Mobile styles for all supported platforms -->
-		<link href="assets/css/kendo.mobile.all.min.css" rel="stylesheet">
+		<link href="assets/css/kendo.blueopal.mobile.min.css" rel="stylesheet">
 		
 
-		<link rel="stylesheet" href="assets/css/master.css">
+		<!--link rel="stylesheet" href="assets/css/master.css"-->
 
 		<script type="text/javascript" src="assets/js/jquery-1.11.1.min.js"></script>
 
